# miles-coder

./: .gitignore  Coding agent完成过程记录.md  README.md  main.py  model_config.py  pyproject.toml  test_context.py  tools.py  第一个agent完成过程记录.md
src/miles_coder/: __init__.py  config.py  main.py  model_config.py  tools.py
test/: min_thinking_call.py
